--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "test": "mocha"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/node": "^17.0.24",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "@types/express-session": "^1.17.4",
+    "@types/express-useragent": "^1.0.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "express-useragent": "^1.0.15",
+    "log": "^6.3.1",
+    "mocha": "^9.2.2",
+    "simple-node-logger": "^21.8.12"
   }
 }
