--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "express-useragent": "^1.0.15",
+    "fs": "0.0.1-security",
     "log": "^6.3.1",
     "mocha": "^9.2.2",
     "simple-node-logger": "^21.8.12"
