--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "start": "ts-node-dev ./src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "test": "mocha"
+    "test": "mocha -r ts-node/register 'test/**/*.ts'"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.24",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.2",
+    "ts-mocha": "^9.0.2",
     "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
@@ -24,7 +31,6 @@
     "express-useragent": "^1.0.15",
     "fs": "0.0.1-security",
     "log": "^6.3.1",
-    "mocha": "^9.2.2",
     "simple-node-logger": "^21.8.12"
   }
 }
