--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev ./src/index.ts",
-    "tracklist": "ts-node-dev ./src/Tracklist.ts",
+    "tracklist": "ts-node-dev ./src/Collaborations.ts",
     "build": "tsc -p tsconfig.json",
     "test": "mocha -r ts-node/register 'test/**/*.ts'"
   },
