--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express-useragent": "^1.0.2",
     "@types/urllib": "^2.33.0",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "express-useragent": "^1.0.15",
