--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/express-session": "^1.17.4",
     "@types/express-useragent": "^1.0.2",
     "@types/urllib": "^2.33.0",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
